--- a/src/components/biopic/bio.css
+++ b/src/components/biopic/bio.css
@@ -123,7 +123,7 @@
 
 .founder-header h1{
     color: rgb(1, 255, 1);
-    font-size: 1.5em;
+    font-size: 19px;
     margin:0 190px 20px;
     text-align:center;
     background-color: #040464;
