--- a/src/components/biopic/bio.css
+++ b/src/components/biopic/bio.css
@@ -123,8 +123,8 @@
 
 .founder-header h1{
     color: rgb(1, 255, 1);
-    font-size: 19px;
-    margin:0 190px 20px;
+    font-size: 24px;
+    margin:10px 40px;
     text-align:center;
     background-color: #040464;
     border-radius: 5px;
